--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "throttle-debounce": "^5.0.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/throttle-debounce": "^5.0.0",
     "tailwindcss": "^3.0.24"
   }
 }
